--- a/src/index.html
+++ b/src/index.html
@@ -1,3 +1,5 @@
+
+
 <html lang="en">
 
 <head>
@@ -10,6 +12,6 @@
 <body>
     <h1>Welcome!</h1>
     <p>To a very simple static html page for testing Amplify hosting</p>
-</body>
+    <p>Guid: f43a7d9c-0086-4db7-9733-a1e91d3ceae0</p></body>
 
 </html>
